# FerroCore

./: .gitignore  Cargo.toml  LICENSE  README.md
libs/feed/: Cargo.toml
libs/follow/: Cargo.toml
libs/like/: Cargo.toml
libs/post/: Cargo.toml
services/comment-api/: Cargo.toml
services/feed-api/: Cargo.toml
services/follow-api/: Cargo.toml
services/like-api/: Cargo.toml
services/media-api/: Cargo.toml
services/notification-api/: Cargo.toml
services/post-api/: Cargo.toml
services/search-api/: Cargo.toml
